Functionality added for Page 1

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -87,3 +87,6 @@ GeneralInformation=General Information
 MarkInactive=Mark Inactive
 
 PermanentlyDelete= Permanently Delete
+
+#XFLD,120: Label for a column title
+LearningDescription=Learning Description
