Unit test cases added

--- a/app/employeeadministration/webapp/manifest.json
+++ b/app/employeeadministration/webapp/manifest.json
@@ -205,5 +205,10 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
-  }
+  },
+  "sap.fe": { 
+          "app": { 
+               "sideEffectsEventsInteractionType": "Confirmation" 
+          }
+     } 
 }
