--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "^8.9.4",
     "@sap/cds-compiler": "^6.0.14",
     "express": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
     "@cap-js/sqlite": "^1",
+    "@sap/cds": "^8.9.4",
     "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.8",
+    "@types/sinon": "^17.0.4",
     "cds-plugin-ui5": "^0.9.3",
     "chai": "^5.2.0",
     "eslint": "^9.30.0",
+    "mocha": "^11.7.1",
+    "sinon": "^21.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -26,6 +30,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "cds-serve",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "test:employee": "mocha -r ts-node/register test/employee-hooks.test.ts",
     "watch-employees": "cds watch --open employees/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-projectmasterdata": "cds watch --open projectmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-learningmasterdata": "cds watch --open learningmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
@@ -46,21 +52,25 @@
     "fiori": {
       "main": "app/launchpad/webapp/index.html"
     },
-     "requires": {
-    "auth": {
-      "kind": "mocked",
-      "users": {
-        "adminUser": {
-          "password": "admin123",
-          "roles": ["Admin"]
-        },
-        "employeeUser": {
-          "password": "emp123",
-          "roles": ["User"]
-        },
-        "*": false
+    "requires": {
+      "auth": {
+        "kind": "mocked",
+        "users": {
+          "adminUser": {
+            "password": "admin123",
+            "roles": [
+              "Admin"
+            ]
+          },
+          "employeeUser": {
+            "password": "emp123",
+            "roles": [
+              "User"
+            ]
+          },
+          "*": false
+        }
       }
     }
-  }
   }
 }
