Changes done for delete button

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -90,3 +90,8 @@ PermanentlyDelete= Permanently Delete
 
 #XFLD,120: Label for a column title
 LearningDescription=Learning Description
+
+Initial=Initial
+
+#XFLD,50
+ReviewerId=Reviewer ID
