Few testcases added and initial learnings added to employee

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.8",
     "@types/sinon": "^17.0.4",
+    "@types/supertest": "^6.0.3",
     "cds-plugin-ui5": "^0.9.3",
     "chai": "^5.2.0",
     "eslint": "^9.30.0",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0",
+    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -31,7 +33,6 @@
     "watch": "tsc -w",
     "start": "cds-serve",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "test:employee": "mocha -r ts-node/register test/employee-hooks.test.ts",
     "watch-employees": "cds watch --open employees/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-projectmasterdata": "cds watch --open projectmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-learningmasterdata": "cds watch --open learningmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
