Did some changes to UI

--- a/app/learningmasterdata/webapp/manifest.json
+++ b/app/learningmasterdata/webapp/manifest.json
@@ -150,7 +150,8 @@
                   }
                 }
               },
-              "initialLoad": "Enabled"
+              "initialLoad": "Enabled",
+              "hideFilterBar": false
             }
           },
           "controlAggregation": "beginColumnPages",
