--- a/app/projectmasterdata/webapp/manifest.json
+++ b/app/projectmasterdata/webapp/manifest.json
@@ -159,7 +159,8 @@
                   }
                 }
               },
-              "initialLoad": "Enabled"
+              "initialLoad": "Enabled",
+              "hideFilterBar": false
             }
           },
           "controlAggregation": "beginColumnPages",
@@ -190,9 +191,8 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
-  }
-,
-"sap.fe": {
+  },
+  "sap.fe": {
     "app": {
       "share": {
         "showSendEmail": false,
