--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^7.32.0",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0",
-    "supertest": "^7.1.1",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
