CodeList added and Integration test added

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js/notifications": "^0.2.5",
     "@sap/cds": "^6.8.2",
     "@sap/cds-compiler": "^6.0.14",
     "@sap/eslint-plugin-ui5-jsdocs": "^2.0.5",
@@ -13,6 +14,7 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@cap-js/cds-test": "^0.4.0",
     "@cap-js/cds-types": "^0.9.0",
     "@cap-js/sqlite": "^1",
     "@openui5/ts-types-esm": "^1.138.0",
@@ -23,8 +25,11 @@
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "cds-plugin-ui5": "^0.9.3",
-    "chai": "^5.2.0",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "chai-subset": "^1.6.0",
     "eslint": "^7.32.0",
+    "jest": "^30.0.4",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0",
     "sqlite3": "^5.1.7",
@@ -37,7 +42,9 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "cds-serve",
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "test": "mocha test/**/*.test.ts",
+    "test:unit": "mocha test/unit/**/*.test.ts",
+    "test:integration": "mocha test/integration/**/*.test.ts",
     "watch-employees": "cds watch --open employees/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-projectmasterdata": "cds watch --open projectmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
     "watch-learningmasterdata": "cds watch --open learningmasterdata/index.html?sap-ui-xx-viewCache=false --livereload false",
